--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="col-md-9" role="main">
 
 <h1 id="resty-stone">resty-stone</h1>
-<p>Rest API toolkit for KeystoneJS.</p>
+<p><strong>Rest API toolkit for <a href="https://github.com/keystonejs/keystone">KeystoneJS</a>.</strong></p>
 <p>A powerful and robust toolkit for building Web API`s.</p>
 <p>Click here for <a href="http://shlomiassaf.github.io/resty-stone">Documentation</a></p>
 <h4 id="see-example-directory-to-understand-how-to-init-a-basic-rest">See <a href="https://github.com/shlomiassaf/resty-stone/tree/master/example">example</a> directory to understand how to init a basic REST.</h4>
